# minimal_hackaton

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  zip_and_store_on_s3.py
app/: config.py  logger.py
app/api/: charts.py  constants.py  tables.py
app/mock_data/: consumption.csv  price.csv
app/models/: table.py  time_series.py
app/queries/: time_series.py
app/schemas/: charts.py  tables.py
app/tools/: aws.py  database.py
scripts/: .env_for_ec2  ec2_first_install.sh  install_and_run_api_on_ec2.sh  run_api_on_ec2.sh
