[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[project]
name = "hackaton"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

[tool.poetry.dependencies]
fastapi = "^0.121.3"
pydantic = "^2.12.4"
pandas = "^2.3.3"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.0"
pandas-stubs = "^2.3.2.250926"
dotenv = "^0.9.9"
boto3 = "^1.41.4"
pydantic-settings = "^2.12.0"
boto3-stubs = "^1.41.3"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
isort = "^5.13.2"
pylint = "^3.2.3"
mypy = "^1.11.2"
pre-commit = "^3.7.0"

[tool.pylint.main]
disable = ["missing-module-docstring", "missing-function-docstring", "logging-fstring-interpolation", "unused-variable"]
max-line-length = 200
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.yapf]
based_on_style = "pep8"
column_limit = 200
indent_width = 4
use_tabs = false
split_before_logical_operator = true
split_before_named_assigns = true
allow_split_before_dict_value = true

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/**", "**/__pycache__/**"]

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
